<resources>
    <string name="app_name">Kotlin application</string>
    <string name="title_entities">Entities</string>
    <string name="title_map">Map</string>
    <string name="title_settings">Settings</string>
    <string name="hint_pick_location">Pick location</string>
    <string name="hint_delete_location">Delete location</string>
    <string name="title_save">Save</string>
    <string name="hint_country">Country</string>
    <string name="hint_city">City</string>
    <string name="hint_latitude">Latitude</string>
    <string name="hint_longitude">Longitude</string>
    <string name="select_image">Select image</string>
    <string name="delete_image">Delete image</string>
    <string name="cities">Cities</string>
    <string name="must_be_not_empty">Must be not empty</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="black">Black</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="font_size">Font size:</string>
    <string name="font_color">Font color:</string>
    <string name="add_city">Add city</string>
</resources>