<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_entities">

    <fragment
        android:id="@+id/navigation_entities"
        android:name="com.example.test2.ui.entities.EntitiesFragment"
        android:label="@string/title_entities"
        tools:layout="@layout/fragment_entities">

    <action
        android:id="@+id/action_entities_to_add_city"
        app:destination="@id/addEntityFormActivity"/>
    <action
        android:id="@+id/action_entities_to_map"
        app:destination="@id/navigation_map"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.test2.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.test2.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <activity
        android:id="@+id/addEntityFormActivity"
        android:name="com.example.test2.ui.entities.entitiesForm.EntitiesFormActivity"
        android:label="activity_form"
        tools:layout="@layout/activity_entities_form" />
</navigation>