<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.entities.entitiesForm.EntitiesFormFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="27dp"
            android:paddingTop="27dp"
            android:paddingEnd="27dp"
            android:paddingBottom="27dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:layout_marginBottom="30dp">

                    <ImageView
                        android:id="@+id/fragment_entities_form_image"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:src="@drawable/ic_baseline_image_not_supported_24"
                        android:layout_marginEnd="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="@+id/fragment_form_photo"
                        app:layout_constraintStart_toStartOf="@+id/fragment_form_photo"
                        app:layout_constraintTop_toBottomOf="@+id/fragment_form_photo" >

                        <Button
                            android:id="@+id/fragment_form_button_select_image"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/select_image" />

                        <Button
                            android:id="@+id/fragment_form_button_delete_image"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/delete_image" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <EditText
                android:id="@+id/fragment_entities_form_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_country"
                android:inputType="textAutoComplete" />

            <EditText
                android:id="@+id/fragment_entities_form_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/hint_city"
                android:inputType="textAutoComplete" />

            <EditText
                android:id="@+id/fragment_entities_form_latitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/hint_latitude"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/fragment_entities_form_longitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/hint_longitude"
                android:inputType="numberDecimal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/fragment_entities_form_button_pick_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/hint_pick_location" />

                    <Button
                        android:id="@+id/fragment_entities_form_button_delete_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/hint_delete_location" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/fragment_form_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>